обновил source/style , обновил as-grid на flex версию

--- a/source/style/style.scss
+++ b/source/style/style.scss
@@ -1,1 +1,6 @@
+@import "helpers/as-grid";
+@import "helpers/variables";
+@import "helpers/mixins";
+@import "helpers/helpers";
+
 @import "main-media";
