--- a/source/style/style.scss
+++ b/source/style/style.scss
@@ -1,5 +1,4 @@
-@import "helpers/as-grid";
-@import "helpers/variables";
-@import "helpers/mixins";
-@import "helpers/helpers";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700');
 
+@import "helpers/**/*.scss";
+@import "components/**/*.scss";
