--- a/source/templates/html/index.html
+++ b/source/templates/html/index.html
@@ -1,49 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-
+<html>
+  <head>
+    <title>PageTitle</title>
+    <link rel="stylesheet" href="style/foundation.css">
     <link rel="stylesheet" href="style/style.css">
-</head>
-<body>
-
-    <div class="dc-form-b">
-        <form action="">
-            <div class="dc-form-b__content">
-                <div class="dc-form-b__title dc-form-b__title--desc">
-                    9 курсов, которые ведут к карьерному росту
-                </div>
-                <div class="dc-form-b__title dc-form-b__title--mobile">
-                    Будьте в курсе!
-                </div>
-
-                <div class="dc-form-b__inputs">
-                    <input type="text" class="dc-form-b-input dc-form-b-input--name" placeholder="Имя">
-                    <input type="email" class="dc-form-b-input dc-form-b-input--email" placeholder="Email">
-                </div>
-
-                <div class="dc-form-b__btn-block">
-                    <button class="dc-form-b__btn h-transition">
-                        Отправить подборку
-                    </button>
-                    <div class="dc-form-b__btn-untertext">
-                        Нажав на кнопку, вы соглашаетесь с условиями обработки <a href="">Персональных данных</a>.
-                    </div>
-                </div>
-
-                <div class="dc-form-b__bottom-text dc-form-b__bottom-text--desc">
-                    Топ 10 курсов, которые продвинут вас по карьерной лестнице. <br>
-                    Уже более 36 000 подписчиков
-                </div>
-                <div class="dc-form-b__bottom-text dc-form-b__bottom-text--mobile">
-                    Подпишись на информацию о новинках, скидках и акциях. Уже более 36 000 подписчиков
-                </div>
-
-
-            </div>
-        </form>
-    </div>
-
-</body>
+  </head>
+  <body>
+    test
+    <script src="js/foundation.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
